--- a/archives/toutiao-search/2023-10-04.md
+++ b/archives/toutiao-search/2023-10-04.md
@@ -1,59 +1,72 @@
 # 2023-10-04
 
-共 130 条
+共 139 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Oct 04 2023 09:41:30 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Oct 04 2023 10:14:59 GMT+0800 (China Standard Time) -->
 1. [全红婵完美一跳裁判全给10分](https://so.toutiao.com/search?keyword=全红婵完美一跳裁判全给10分)
-1. [中国队夺得男子4×100米接力冠军](https://so.toutiao.com/search?keyword=中国队夺得男子4×100米接力冠军)
+1. [中国队包揽男女4x100米接力金牌](https://so.toutiao.com/search?keyword=中国队包揽男女4x100米接力金牌)
 1. [带着11位布依族妈妈到北京看升国旗](https://so.toutiao.com/search?keyword=带着11位布依族妈妈到北京看升国旗)
 1. [全红婵力压陈芋汐摘金](https://so.toutiao.com/search?keyword=全红婵力压陈芋汐摘金)
-1. [麦卡锡称将不再竞选连任众议长](https://so.toutiao.com/search?keyword=麦卡锡称将不再竞选连任众议长)
-1. [中国女足3-4不敌日本无缘决赛](https://so.toutiao.com/search?keyword=中国女足3-4不敌日本无缘决赛)
-1. [驻泰使馆：受害中国公民身份已查明](https://so.toutiao.com/search?keyword=驻泰使馆：受害中国公民身份已查明)
 1. [美众议院投票罢免麦卡锡议长职务](https://so.toutiao.com/search?keyword=美众议院投票罢免麦卡锡议长职务)
-1. [特朗普又出庭应诉 午餐吃麦当劳](https://so.toutiao.com/search?keyword=特朗普又出庭应诉+午餐吃麦当劳)
-1. [多名游客爬泰山被消防抬下山](https://so.toutiao.com/search?keyword=多名游客爬泰山被消防抬下山)
+1. [中国女足3-4不敌日本无缘决赛](https://so.toutiao.com/search?keyword=中国女足3-4不敌日本无缘决赛)
+1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
+1. [麦卡锡称将不再竞选连任众议长](https://so.toutiao.com/search?keyword=麦卡锡称将不再竞选连任众议长)
+1. [众星亮相巴黎时装周 杨紫变瘦变美](https://so.toutiao.com/search?keyword=众星亮相巴黎时装周+杨紫变瘦变美)
+1. [驻泰使馆：受害中国公民身份已查明](https://so.toutiao.com/search?keyword=驻泰使馆：受害中国公民身份已查明)
 1. [原来郑少秋有3段感情4个女儿](https://so.toutiao.com/search?keyword=原来郑少秋有3段感情4个女儿)
 1. [成都辟谣养老机构老人深夜被打](https://so.toutiao.com/search?keyword=成都辟谣养老机构老人深夜被打)
-1. [体坛：中国女足与日本差距让人绝望](https://so.toutiao.com/search?keyword=体坛：中国女足与日本差距让人绝望)
-1. [恒大复牌大涨是利空出尽了吗](https://so.toutiao.com/search?keyword=恒大复牌大涨是利空出尽了吗)
-1. [男子4X100米反超日本的陈佳鹏是谁](https://so.toutiao.com/search?keyword=男子4X100米反超日本的陈佳鹏是谁)
 1. [日本女足赛后鞠躬致敬水庆霞](https://so.toutiao.com/search?keyword=日本女足赛后鞠躬致敬水庆霞)
-1. [众星亮相巴黎时装周 杨紫变瘦变美](https://so.toutiao.com/search?keyword=众星亮相巴黎时装周+杨紫变瘦变美)
-1. [借名买的房归谁](https://so.toutiao.com/search?keyword=借名买的房归谁)
+1. [恒大复牌大涨是利空出尽了吗](https://so.toutiao.com/search?keyword=恒大复牌大涨是利空出尽了吗)
+1. [体坛：中国女足与日本差距让人绝望](https://so.toutiao.com/search?keyword=体坛：中国女足与日本差距让人绝望)
+1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
+1. [特朗普又出庭应诉 午餐吃麦当劳](https://so.toutiao.com/search?keyword=特朗普又出庭应诉+午餐吃麦当劳)
+1. [多名游客爬泰山被消防抬下山](https://so.toutiao.com/search?keyword=多名游客爬泰山被消防抬下山)
+1. [缅甸再移交209名中国籍犯罪嫌疑人](https://so.toutiao.com/search?keyword=缅甸再移交209名中国籍犯罪嫌疑人)
 1. [女子举报100多台车走应急道引争议](https://so.toutiao.com/search?keyword=女子举报100多台车走应急道引争议)
-1. [旅游选热门景区还是小众景点](https://so.toutiao.com/search?keyword=旅游选热门景区还是小众景点)
 1. [警方通报婚车与环卫车相撞：致6死](https://so.toutiao.com/search?keyword=警方通报婚车与环卫车相撞：致6死)
+1. [旅游选热门景区还是小众景点](https://so.toutiao.com/search?keyword=旅游选热门景区还是小众景点)
+1. [男子4X100米反超日本的陈佳鹏是谁](https://so.toutiao.com/search?keyword=男子4X100米反超日本的陈佳鹏是谁)
+1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
+1. [两车轻微剐蹭致堵车 路过司机怒怼](https://so.toutiao.com/search?keyword=两车轻微剐蹭致堵车+路过司机怒怼)
+1. [国庆被人群包围的无语菩萨更无语了](https://so.toutiao.com/search?keyword=国庆被人群包围的无语菩萨更无语了)
+1. [邹凯说退役后还在寻找新目标](https://so.toutiao.com/search?keyword=邹凯说退役后还在寻找新目标)
+1. [媒体评本地人对游客拥挤发出怨言](https://so.toutiao.com/search?keyword=媒体评本地人对游客拥挤发出怨言)
+1. [美媒炒“台企助华为” 蔡正元反驳](https://so.toutiao.com/search?keyword=美媒炒“台企助华为”+蔡正元反驳)
+1. [李梦WNBA新赛季去向未定](https://so.toutiao.com/search?keyword=李梦WNBA新赛季去向未定)
 1. [举报高速违章1分钟赚3千？警方回应](https://so.toutiao.com/search?keyword=举报高速违章1分钟赚3千？警方回应)
+1. [男孩路边揽客4天拉来5200元客单](https://so.toutiao.com/search?keyword=男孩路边揽客4天拉来5200元客单)
+1. [李梦：在异国他乡得到认可不容易](https://so.toutiao.com/search?keyword=李梦：在异国他乡得到认可不容易)
+1. [2023年诺贝尔物理学奖揭晓](https://so.toutiao.com/search?keyword=2023年诺贝尔物理学奖揭晓)
+1. [泰国商场枪击案伤亡修正为2死5伤](https://so.toutiao.com/search?keyword=泰国商场枪击案伤亡修正为2死5伤)
+1. [借名买的房归谁](https://so.toutiao.com/search?keyword=借名买的房归谁)
+1. [湖南岳阳通报党员干部违规吃喝问题](https://so.toutiao.com/search?keyword=湖南岳阳通报党员干部违规吃喝问题)
+1. [马斯克发图嘲讽泽连斯基](https://so.toutiao.com/search?keyword=马斯克发图嘲讽泽连斯基)
+1. [韩旭：女篮决赛前不能放松](https://so.toutiao.com/search?keyword=韩旭：女篮决赛前不能放松)
+1. [黄晓明晒妈妈做的韭菜盒子](https://so.toutiao.com/search?keyword=黄晓明晒妈妈做的韭菜盒子)
+1. [美国对乌克兰安全援助计划暂停](https://so.toutiao.com/search?keyword=美国对乌克兰安全援助计划暂停)
+1. [老人因大虾被碾压趴车不让走遭顶撞](https://so.toutiao.com/search?keyword=老人因大虾被碾压趴车不让走遭顶撞)
+1. [网红乌啦啦在天津吃了4斤包子](https://so.toutiao.com/search?keyword=网红乌啦啦在天津吃了4斤包子)
+1. [军训裤翻面就是校服裤](https://so.toutiao.com/search?keyword=军训裤翻面就是校服裤)
+1. [跟随守礁战士探访美丽南海](https://so.toutiao.com/search?keyword=跟随守礁战士探访美丽南海)
+1. [张馨予回应带火广西打卡地](https://so.toutiao.com/search?keyword=张馨予回应带火广西打卡地)
+1. [德方称将派4000德军永久驻扎立陶宛](https://so.toutiao.com/search?keyword=德方称将派4000德军永久驻扎立陶宛)
+1. [泰国总理赴医院看望受伤中国游客](https://so.toutiao.com/search?keyword=泰国总理赴医院看望受伤中国游客)
+1. [安徽一辆商务车追尾拖拉机致3死](https://so.toutiao.com/search?keyword=安徽一辆商务车追尾拖拉机致3死)
+1. [中央气象台继续发台风黄警](https://so.toutiao.com/search?keyword=中央气象台继续发台风黄警)
+1. [中国队夺得男子4×100米接力冠军](https://so.toutiao.com/search?keyword=中国队夺得男子4×100米接力冠军)
 1. [沙特田径选手兴奋剂检测阳性](https://so.toutiao.com/search?keyword=沙特田径选手兴奋剂检测阳性)
 1. [加拿大选出史上首位黑人众议长](https://so.toutiao.com/search?keyword=加拿大选出史上首位黑人众议长)
-1. [泰国商场枪击案伤亡修正为2死5伤](https://so.toutiao.com/search?keyword=泰国商场枪击案伤亡修正为2死5伤)
-1. [两车轻微剐蹭致堵车 路过司机怒怼](https://so.toutiao.com/search?keyword=两车轻微剐蹭致堵车+路过司机怒怼)
-1. [邹凯说退役后还在寻找新目标](https://so.toutiao.com/search?keyword=邹凯说退役后还在寻找新目标)
-1. [甄妮发文质问郑少秋](https://so.toutiao.com/search?keyword=甄妮发文质问郑少秋)
 1. [扎哈谈战胜曼联：美妙的一晚](https://so.toutiao.com/search?keyword=扎哈谈战胜曼联：美妙的一晚)
-1. [曼谷枪击现场中国游客：事发突然](https://so.toutiao.com/search?keyword=曼谷枪击现场中国游客：事发突然)
-1. [2023年诺贝尔物理学奖揭晓](https://so.toutiao.com/search?keyword=2023年诺贝尔物理学奖揭晓)
-1. [中央气象台继续发台风黄警](https://so.toutiao.com/search?keyword=中央气象台继续发台风黄警)
-1. [泰国总理赴医院看望受伤中国游客](https://so.toutiao.com/search?keyword=泰国总理赴医院看望受伤中国游客)
 1. [《莫斯科行动》被质疑排片少](https://so.toutiao.com/search?keyword=《莫斯科行动》被质疑排片少)
-1. [马斯克发图嘲讽泽连斯基](https://so.toutiao.com/search?keyword=马斯克发图嘲讽泽连斯基)
-1. [张馨予回应带火广西打卡地](https://so.toutiao.com/search?keyword=张馨予回应带火广西打卡地)
-1. [黄晓明晒妈妈做的韭菜盒子](https://so.toutiao.com/search?keyword=黄晓明晒妈妈做的韭菜盒子)
-1. [“阿秒激光”为何能获诺奖垂青](https://so.toutiao.com/search?keyword=“阿秒激光”为何能获诺奖垂青)
 1. [全红婵7个10分截图打卡](https://so.toutiao.com/search?keyword=全红婵7个10分截图打卡)
-1. [安徽一辆商务车追尾拖拉机致3死](https://so.toutiao.com/search?keyword=安徽一辆商务车追尾拖拉机致3死)
 1. [媒体：收贪官父亲钱的女儿有没有罪](https://so.toutiao.com/search?keyword=媒体：收贪官父亲钱的女儿有没有罪)
 1. [媒体评一座山被张馨予打卡后走红](https://so.toutiao.com/search?keyword=媒体评一座山被张馨予打卡后走红)
 1. [环卫工人把垃圾倒入海中被开除](https://so.toutiao.com/search?keyword=环卫工人把垃圾倒入海中被开除)
-1. [韩旭：女篮决赛前不能放松](https://so.toutiao.com/search?keyword=韩旭：女篮决赛前不能放松)
 1. [媒体：扩大化举报让老师选择躺平](https://so.toutiao.com/search?keyword=媒体：扩大化举报让老师选择躺平)
-1. [老人因大虾被碾压趴车不让走遭顶撞](https://so.toutiao.com/search?keyword=老人因大虾被碾压趴车不让走遭顶撞)
 1. [吴京谢楠儿子是王楚钦迷弟](https://so.toutiao.com/search?keyword=吴京谢楠儿子是王楚钦迷弟)
 1. [河北武安：悬崖峭壁上 太行菊盛放](https://so.toutiao.com/search?keyword=河北武安：悬崖峭壁上+太行菊盛放)
 1. [布林肯对华国庆祝贺新增2个关键词](https://so.toutiao.com/search?keyword=布林肯对华国庆祝贺新增2个关键词)
-1. [男孩路边揽客4天拉来5200元客单](https://so.toutiao.com/search?keyword=男孩路边揽客4天拉来5200元客单)
 1. [英国为何宣布向乌派兵又“撤回”](https://so.toutiao.com/search?keyword=英国为何宣布向乌派兵又“撤回”)
 1. [全红婵礼貌让前面的记者先问](https://so.toutiao.com/search?keyword=全红婵礼貌让前面的记者先问)
 1. [亚运会赛场响起奢香夫人](https://so.toutiao.com/search?keyword=亚运会赛场响起奢香夫人)
@@ -66,9 +79,7 @@
 1. [屡被中央督察点名地假期迎省级暗访](https://so.toutiao.com/search?keyword=屡被中央督察点名地假期迎省级暗访)
 1. [女子称装修工在自家地板就地大小便](https://so.toutiao.com/search?keyword=女子称装修工在自家地板就地大小便)
 1. [谢震业为队友点播《年轻的战场》](https://so.toutiao.com/search?keyword=谢震业为队友点播《年轻的战场》)
-1. [德方称将派4000德军永久驻扎立陶宛](https://so.toutiao.com/search?keyword=德方称将派4000德军永久驻扎立陶宛)
 1. [港珠澳大桥单日旅客破10万人次](https://so.toutiao.com/search?keyword=港珠澳大桥单日旅客破10万人次)
-1. [网红乌啦啦在天津吃了4斤包子](https://so.toutiao.com/search?keyword=网红乌啦啦在天津吃了4斤包子)
 1. [全红婵夺冠后比心感谢观众](https://so.toutiao.com/search?keyword=全红婵夺冠后比心感谢观众)
 1. [国庆档电影票房究竟被什么影响了](https://so.toutiao.com/search?keyword=国庆档电影票房究竟被什么影响了)
 1. [英军两艘航母出动 战力却遭质疑](https://so.toutiao.com/search?keyword=英军两艘航母出动+战力却遭质疑)
@@ -102,7 +113,6 @@
 1. [官方通报网传一养老院深夜殴打老人](https://so.toutiao.com/search?keyword=官方通报网传一养老院深夜殴打老人)
 1. [驻美大使：人文交流助稳定中美关系](https://so.toutiao.com/search?keyword=驻美大使：人文交流助稳定中美关系)
 1. [菲律宾1分险胜伊朗 半决赛再战中国](https://so.toutiao.com/search?keyword=菲律宾1分险胜伊朗+半决赛再战中国)
-1. [缅甸再移交209名中国籍犯罪嫌疑人](https://so.toutiao.com/search?keyword=缅甸再移交209名中国籍犯罪嫌疑人)
 1. [皇马晒欧冠客战那不勒斯海报](https://so.toutiao.com/search?keyword=皇马晒欧冠客战那不勒斯海报)
 1. [女子在火锅店纵火后逃离](https://so.toutiao.com/search?keyword=女子在火锅店纵火后逃离)
 1. [日本当局谴责日参议员铃木宗男访俄](https://so.toutiao.com/search?keyword=日本当局谴责日参议员铃木宗男访俄)
@@ -118,7 +128,6 @@
 1. [武汉光谷步行街国庆氛围拉满](https://so.toutiao.com/search?keyword=武汉光谷步行街国庆氛围拉满)
 1. [俄罗斯格鲁乌特种兵奉命锄奸](https://so.toutiao.com/search?keyword=俄罗斯格鲁乌特种兵奉命锄奸)
 1. [浙江体育职业技术学院已获22枚金牌](https://so.toutiao.com/search?keyword=浙江体育职业技术学院已获22枚金牌)
-1. [中国队包揽男女4x100米接力金牌](https://so.toutiao.com/search?keyword=中国队包揽男女4x100米接力金牌)
 1. [霍启山：准备奖金犒赏中国香港队](https://so.toutiao.com/search?keyword=霍启山：准备奖金犒赏中国香港队)
 1. [公安辅警成功救助欲跳桥轻生女子](https://so.toutiao.com/search?keyword=公安辅警成功救助欲跳桥轻生女子)
 1. [赵今麦林允儿同框](https://so.toutiao.com/search?keyword=赵今麦林允儿同框)
